solc_ossfuzz_seed_corpus/test_solidity/test_36a90063f9e64f748f36a5a3b78a4999634e98b51e7dff583b3ba4f1fc34be8c_5d9ab3fef47e39cea4943eb14c27161fd1ddaec4_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(int152 i0)      returns(function (bytes9, string memory) external   returns (function (bool, bool) external  , bool) o0,bool o1){
  try o0(bytes9(0xffffffffffffffffff),string(bytes("ffffffffffffffffffffffffffffffffff000000"))) returns (function (bool, bool) external   l0, bool l1)
  {
  }
  catch
  {
    return (o0, true);
  }
  do
  {
    break;
  }
  while (true);
}
function f1(int72 i0,int96 i1)      returns(int8[1] memory o0){
  for(uint solinit0 = 0; solinit0 < (((((uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935) + uint256(36528057957614206987660406278986229351151987853145472486566107331475474346780)) << uint120(uint120(134656591245649916707219346127228775))) % uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)) & uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)) % 11); solinit0++)
  {
    o0 = 0x1f01cd8211631690305A1F36aFec8F29156F81d0 f2 /*suffix expr*/;
    return ([int8(0)]);
  }
  o0 = [int8(0)];
}
pragma solidity >= 0.0.0;
function f2(address i0) pure suffix  returns(int8[1] memory o0)
{
  o0 = 0x0000000000000000000000000000000000000008 f3 /*suffix expr*/;
  assert(false);
}
function f3(address i0) pure suffix  returns(int8[1] memory o0)
{
  function (uint64, function (bool, int168, int128) external   returns (bool)) external   returns (bool) l0;
  if (i0 == address(0x0000000000000000000000000000000000000001))
  {
    if (i0 == address(0x0000000000000000000000000000000000000008))
    {
    }
    else if (i0 < address(0x0000000000000000000000000000000000000005))
    {
      if (i0 >= address(0x0000000000000000000000000000000000000005))
      {
      }
    }
    for(uint solinit1 = 0; solinit1 < ((((((uint256(0) >> uint192(uint192(6277101735386680763835789423207666416102355444464034512895))) | uint256(25184187830278757292953228838197191109645948878491165341597456235282250519150)) ^ uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)) - uint256(86407142883120944176187584568490481526207761614647359064854096939598399509721)) - uint256(37675532451754697720950717728105965560076094383188865707722430700851641831734)) % 11); solinit1++)
    {
      if (i0 == msg.sender)
      {
        break;
      }
      else
      {
        continue;
      }
      return (false f5 /*suffix expr*/);
    }
  }
}
function f4(bool i0) pure suffix  returns(address o0)
{
}
function f5(bool i0) pure suffix  returns(int8[1] memory o0)
{
}

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25, M26, M27, M28, M29, M30, M31,
  M32, M33, M34, M35, M36, M37, M38, M39,
  M40, M41, M42, M43, M44, M45, M46, M47,
  M48, M49, M50, M51, M52, M53, M54, M55,
  M56, M57, M58, M59, M60, M61, M62, M63,
  M64, M65, M66, M67, M68, M69, M70, M71,
  M72, M73, M74, M75, M76, M77, M78, M79,
  M80, M81, M82, M83, M84, M85, M86, M87,
  M88, M89, M90, M91, M92, M93, M94, M95,
  M96, M97, M98, M99, M100, M101, M102, M103,
  M104, M105, M106, M107, M108, M109, M110, M111,
  M112, M113, M114, M115, M116, M117, M118, M119,
  M120, M121, M122, M123, M124, M125, M126, M127,
  M128, M129, M130, M131, M132, M133, M134, M135,
  M136, M137, M138, M139, M140, M141, M142, M143,
  M144, M145, M146, M147, M148, M149, M150, M151,
  M152, M153, M154, M155, M156, M157, M158, M159,
  M160, M161, M162, M163, M164, M165, M166, M167,
  M168, M169, M170, M171, M172, M173, M174, M175,
  M176, M177, M178, M179, M180, M181, M182, M183,
  M184, M185, M186, M187, M188, M189, M190, M191,
  M192, M193, M194, M195, M196, M197, M198, M199,
  M200, M201, M202, M203, M204, M205, M206, M207,
  M208, M209, M210, M211, M212, M213, M214, M215,
  M216, M217
}
// ----
// Warning 5740: (su0.sol:374-378): Unreachable code.
// Warning 5740: (su0.sol:914-924): Unreachable code.
// Warning 5740: (su0.sol:2354-2387): Unreachable code.
// Warning 5667: (su0.sol:12-21): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:248-283): Unused try/catch parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:285-292): Unused try/catch parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:395-403): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:404-412): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:1088-1098): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:1299-1404): Unused local variable.
// Warning 2018: (su0.sol:383-1049): Function state mutability can be restricted to pure
// TypeError 2527: (su0.sol:2260-2270): Function declared as pure, but this expression (potentially) reads from the environment or state and thus requires "view".
